tests/NormalTests/paczka1/small_fuzzy/77334776.err
Error in line 3: UJl5ewwOqG2 A102 93,2
Error in line 2: nAfpNxgY8 A835 26,3
Error in line 5: A835 A498 41,7
